# PyPWA-Utilities

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/: Vec.h  bpn.h  cpcmEXP.h  event.h  fit.h  fitlog.h  fitparse.h  integral.h  keyParse.h  keyfile.h  lorentz.h  massDep.h  matrix.h  minuit.h  ntypes.h  parseutils.h  particle.h  particleData.h  particleType.h  plib.h  ppgen.h  pputil.h  txtEvent.h  wave.h  waveH.h
src/: CMakeLists.txt  Vec.cc  code.cc  event.cc  expDist.cc  fit.cc  fitlog.cc  fitparse.cc  fort_open.f  gamp.cc  init.cc  int.cc  integral.cc  keyParse.cc  keyScan.cc  keyfile.cc  lex.cc  logview.cc  lorentz.cc  massDep.cc  math.cc  matrix.cc  minuit.cc  parseutils.cc  particle.cc  particleData.cc  ppgen.cc  pputil.cc  symbol.cc  txtEvent.cc  vamp.cc  wave.cc  waveH.cc
src/gamp/: CMakeLists.txt  gamp.cc  keyParse.cc  keyParse.h  keyScan.cc  keyfile.cc  keyfile.h  wave.cc  wave.h  waveH.cc  waveH.h
src/lib/: CMakeLists.txt  event.cc  event.h  lorentz.cc  lorentz.h  massDep.cc  massDep.h  matrix.h  particle.cc  particle.h  particleData.cc  particleData.h  particleType.h
src/lib/math/: CMakeLists.txt  VFour.cpp  VFour.h  VThree.cpp  VThree.h  io.h
src/math/: VFour.h  VThree.h  io.cpp  io.h
src/ppgen/: CMakeLists.txt  bpn.h  expDist.cc  ntypes.h  plib.h  ppgen.cc  ppgen.h  txtEvent.cc  txtEvent.h
src/shared/: CMakeLists.txt  event.cc  event.h  lorentz.cc  lorentz.h  massDep.cc  massDep.h  matrix.h  particle.cc  particle.h  particleData.h  pputil.cc  pputil.h
src/shared/math/: CMakeLists.txt  VFour.cpp  VFour.h  io.cpp  io.h
src/vamp/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  vamp.cpp
